--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@material-ui/core": "^3.9.3",
     "bootstrap": "^4.1.3",
     "gatsby": "^2.0.0",
     "gatsby-plugin-catch-links": "^2.0.3",
